--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/hr-sw2?ServerTimezone=America/Lima
+spring.datasource.url=jdbc:mysql://localhost:3306/hr-sw2
 spring.datasource.username=root
 spring.datasource.password=root
